--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "axios": "^1.6.5",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.312.0",
     "react": "^18.2.0",
